Fixed: Update OpenApiUtil to resolve compilation warnings